# MinimalPathTracer

./: CMakeLists.txt  README.md  image.ppm  minimal_pt.cpp
